--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/messaging": "^11.2.0",
+    "@react-native-google-signin/google-signin": "^6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
     "is_js": "^0.9.0",
@@ -22,13 +26,20 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-confirmation-code-field": "^6.5.1",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.1.23",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localization": "^2.1.6",
-    "react-native-reanimated": "^2.0.0",
+    "react-native-paper": "^4.7.2",
+    "react-native-push-notification": "^7.2.3",
+    "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5"
   },
